# 4over6

./: README.md
client/cpp/: 4o6.h  main.cpp
client_frontend/: gradle.properties
client_frontend/app/: build.gradle
client_frontend/app/src/main/: AndroidManifest.xml
client_frontend/app/src/main/java/com/example/a4over6/: MainActivity.java  MyVpnService.java
client_frontend/app/src/main/jni/: Android.mk  com_example_a4over6_MainActivity.h  com_example_a4over6_MyVpnService.h  common.cpp  common.h  main.c  main.cpp  proto.cpp  proto.h  protocol.cpp  protocol.h  vpn.cpp  vpn.h  vpn_main.cpp  vpn_main.h
client_frontend/app/src/main/res/layout/: activity_main.xml
client_frontend/app/src/main/res/values/: strings.xml
client_frontend/gradle/wrapper/: gradle-wrapper.properties
server/: main.cpp  server_util.h
server/4over6-server/: .gitignore  CMakeLists.txt  clientConnection.cpp  clientConnection.h  common.h  main.cpp  msg_queue.cpp  msg_queue.h  server.cpp  server.h  tun.cpp  tun.h
server/Server/: run.sh
server/cy/: main 2.cpp  main.cpp
